--- a/www/index.html
+++ b/www/index.html
@@ -27,15 +27,61 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>Test Micro & Photo</title>
     </head>
     <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+        <div class="app" style="top:100px; left: 120px;" align="center">
+            <table cellpadding="0" cellspacing="0" border="0" width="520px" align="center" style="background-color: #eeeeff; height: 55px;">
+                <tr align="center">
+                    <td colspan="8" align="center">
+                        <!--<img src="record.png" align="center" width="170px" height="170px" border="none">-->
+                        <br/>
+                        <label for="a1" style="font-size: medium">Photo & Record Play Audio</label>
+                        <br/>
+                        <label for="a1" style="font-size: small">(PhoneGap platform)</label>
+                        <br/>
+                        <br/>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="10px"></td>
+                    <td width="50px" valign="center">
+                        <img id="exitImg" src="img/exit.png" align="center" width="50px" height="50px" border="none" onclick="exitApp();" >
+                    </td>
+                    <td width="100px" valign="center">
+                        <p id="audio_position" style="font-family: Arial; font-size: 14pt ; font-weight: bold; height: 55px;"></p>
+                    </td>
+                    <td width="255px" align="left" height="55px" valign="center">
+                        <div id="divlegend" style="visibility: hidden; background-color: khaki; width: 255px; height: 55px;" >
+                            <table cellpadding="0" cellspacing="0" border="0" width="255px" align="center" style="background-color: khaki; height: 55px;">
+                                <tr>
+                                    <td width="5px" align="center"></td>
+                                    <td width="30px" align="center">
+                                        <img id="recImg" src="img/micro_push_rec.png" align="left" width="30px" height="30px" border="none"  >
+                                    </td>
+                                    <td width="215px" align="center">
+                                        <label for="lbllegend" style="font-family: Arial; font-size: 12pt; font-weight: bold;">DESLICE PARA CANCELAR</label>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </td>
+                    <td width="50px">
+                        <img id="playAudio_Push" src="img/play_red.png" align="center" width="50px" height="50px" border="none" onclick="playAudioPush();" >
+                    </td>
+                    <td width="50px" align="center">
+                        <img id="photoImg" src="img/photo.png" align="center" width="50px" height="50px" border="none" onclick="capturePhoto();">
+                    </td>
+                    <td style="width: 15px;"></td>
+                    <td width="50px">
+                        <img id="recordAudio_Push" src="img/micro_push.png" align="center" width="50px" height="50px" border="none" >
+                    </td>
+                    <td width="10px"></td>
+                </tr>
+                <tr align="center">
+                    <td colspan="7" align="center" style="height: 10px"></td>
+                </tr>
+            </table>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
