--- a/www/index.html
+++ b/www/index.html
@@ -31,10 +31,10 @@
     </head>
     <body>
         <div class="app" style="top:100px; left: 120px;" align="center">
-            <table cellpadding="0" cellspacing="0" border="0" width="520px" align="center" style="background-color: #eeeeff; height: 55px;">
+            <table cellpadding="0" cellspacing="0" border="0" width="520px" align="center" style="background-color: #ececec; height: 55px;">
                 <tr align="center">
                     <td colspan="8" align="center">
-                        <!--<img src="record.png" align="center" width="170px" height="170px" border="none">-->
+                        <img src="photorecord.png" align="center" width="190px" height="170px" border="none">
                         <br/>
                         <label for="a1" style="font-size: medium">Photo & Record Play Audio</label>
                         <br/>
@@ -85,6 +85,8 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/audio.js"></script>
+        <script type="text/javascript" src="js/photo.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
