--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
             <table cellpadding="0" cellspacing="0" border="0" width="520px" align="center" style="background-color: #ececec; height: 55px;">
                 <tr align="center">
                     <td colspan="8" align="center">
-                        <img src="photorecord.png" align="center" width="190px" height="170px" border="none">
+                        <img src="img/photorecord.png" align="center" width="190px" height="170px" border="none">
                         <br/>
                         <label for="a1" style="font-size: medium">Photo & Record Play Audio</label>
                         <br/>
