--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
             <table cellpadding="0" cellspacing="0" border="0" width="520px" align="center" style="background-color: #ececec; height: 55px;">
                 <tr align="center">
                     <td colspan="8" align="center">
-                        <img src="img/photorecord.png" align="center" width="190px" height="170px" border="none">
+                        <img src="img/photorecord.png" align="center" width="190px" height="170px" border="none" />
                         <br/>
                         <label for="a1" style="font-size: medium">Photo & Record Play Audio</label>
                         <br/>
@@ -46,7 +46,7 @@
                 <tr>
                     <td width="10px"></td>
                     <td width="50px" valign="center">
-                        <img id="exitImg" src="img/exit.png" align="center" width="50px" height="50px" border="none" onclick="exitApp();" >
+                        <img id="exitImg" src="img/exit.png" align="center" width="50px" height="50px" border="none" onclick="exitApp();" />
                     </td>
                     <td width="100px" valign="center">
                         <p id="audio_position" style="font-family: Arial; font-size: 14pt ; font-weight: bold; height: 55px;"></p>
@@ -57,7 +57,7 @@
                                 <tr>
                                     <td width="5px" align="center"></td>
                                     <td width="30px" align="center">
-                                        <img id="recImg" src="img/micro_push_rec.png" align="left" width="30px" height="30px" border="none"  >
+                                        <img id="recImg" src="img/micro_push_rec.png" align="left" width="30px" height="30px" border="none" />
                                     </td>
                                     <td width="215px" align="center">
                                         <label for="lbllegend" style="font-family: Arial; font-size: 12pt; font-weight: bold;">DESLICE PARA CANCELAR</label>
@@ -67,14 +67,14 @@
                         </div>
                     </td>
                     <td width="50px">
-                        <img id="playAudio_Push" src="img/play_red.png" align="center" width="50px" height="50px" border="none" onclick="playAudioPush();" >
+                        <img id="playAudio_Push" src="img/play_red.png" align="center" width="50px" height="50px" border="none" onclick="playAudioPush();" />
                     </td>
                     <td width="50px" align="center">
-                        <img id="photoImg" src="img/photo.png" align="center" width="50px" height="50px" border="none" onclick="capturePhoto();">
+                        <img id="photoImg" src="img/photo.png" align="center" width="50px" height="50px" border="none" onclick="capturePhoto();" />
                     </td>
                     <td style="width: 15px;"></td>
                     <td width="50px">
-                        <img id="recordAudio_Push" src="img/micro_push.png" align="center" width="50px" height="50px" border="none" >
+                        <img id="recordAudio_Push" src="img/micro_push.png" align="center" width="50px" height="50px" border="none" />
                     </td>
                     <td width="10px"></td>
                 </tr>
@@ -85,8 +85,8 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <!--<script type="text/javascript" src="js/audio.js"></script>
-        <script type="text/javascript" src="js/photo.js"></script>-->
+        <script type="text/javascript" src="js/audio.js"></script>
+        <script type="text/javascript" src="js/photo.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
