--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
                     <td colspan="8" align="center">
                         <img src="img/photorecord.png" align="center" width="190px" height="170px" border="none" />
                         <br/>
-                        <label for="a1" style="font-size: medium">Photo & Record Play Audio</label>
+                        <label for="a1" style="font-size: medium">AAA Photo & Record Play Audio</label>
                         <br/>
                         <label for="a1" style="font-size: small">(PhoneGap platform)</label>
                         <br/>
@@ -85,10 +85,12 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/audio.js"></script>
-        <script type="text/javascript" src="js/photo.js"></script>
+        <!--<script type="text/javascript" src="js/audio.js"></script>-->
+        <!--<script type="text/javascript" src="js/photo.js"></script>-->
+        <!--
         <script type="text/javascript">
             app.initialize();
         </script>
+        -->
     </body>
 </html>
