--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <!--<script type="text/javascript" src="js/audio.js"></script>-->
-        <!--<script type="text/javascript" src="js/photo.js"></script>-->
+        <script type="text/javascript" src="js/photo.js"></script>
         <!--
         <script type="text/javascript">
             app.initialize();
