--- a/www/index.html
+++ b/www/index.html
@@ -30,24 +30,68 @@
         <title>Test Micro & Photo</title>
     </head>
     <body>
-        <div class="app" style="top:100px; left: 120px;" align="center">
-            <table cellpadding="0" cellspacing="0" border="0" width="520px" align="center" style="background-color: #ececec; height: 55px;">
-                <tr align="center">
-                    <td colspan="8" align="center">
-                        <img src="img/photorecord.png" align="center" width="190px" height="170px" border="none" />
-                        <br/>
-                        <label for="a1" style="font-size: medium"> -- Photo & Record Play Audio -- </label>
-                        <br/>
-                        <label for="a1" style="font-size: small">(PhoneGap platform)</label>
-                        <br/>
-                        <br/>
+        <div class="app" style="top:100px; left: 120px; " align="center;">
+            <table cellpadding="0" cellspacing="0" border="0" width="520px"  align="center" style="background-color: #ececec;">
+                <tr valign="middle" align="center" style="width: 520px;">
+                    <td valign="top" align="left" style="background-color: #ececec; color: #000000;width: 520px;">
+                        <table valign="top" cellpadding="0" cellspacing="0" border="0" width="520px" align="center" style="background-color: #ececec;height: 50px">
+                            <td colspan="7" align="left" style="background-color: cornflowerblue; color: #eeeeee">
+                                <!--<label for="b1" style="font-size: 25pt">&nbsp;MyNotes</label>-->
+                                <img id="MyNotesLogo" src="img/MyNotes.png" align="center" width="190px" height="40px" border="none" />
+                            </td>
+                            <td width="50px" style="background-color: cornflowerblue; color: #eeeeee">
+                                <img id="exitImg" src="img/exit_w.png" align="center" width="45px" height="45px" border="none" onclick="exitApp();" />
+                            </td>
+                        </table>
                     </td>
                 </tr>
-                <tr>
-                    <td width="10px"></td>
-                    <td width="50px" valign="center">
-                        <img id="exitImg" src="img/exit.png" align="center" width="50px" height="50px" border="none" onclick="exitApp();" />
+                <tr valign="top" align="left" style="width: 520px;">
+                    <td valign="top" align="left" style="background-color: #ececec; color: #000000;width: 520px;">
+                        <table valign="top" cellpadding="0" cellspacing="0" border="0" width="520px" style="background-color: #ececec;height: 60px">
+                            <td width="10px"></td>
+                            <td width="400px">
+                                <input type='text' placeholder='my note' style="font-family: 'Helvetica Neue Light', 'Lucida Grande', 'Calibri', 'Arial', 'sans-serif';font-size: 25pt" width="390px" onchange="cambiaIcono();"/>
+                            </td>
+                            <td width="50px" align="center">
+                                <img id="photoImg" src="img/photo.png" align="center" width="50px" height="50px" border="none" onclick="capturePhoto();" />
+                            </td>
+                            <td style="width: 10px;"></td>
+                            <td width="50px">
+                                <img id="recordAudio_Push" src="img/micro_push.png" align="center" width="50px" height="50px" border="none" />
+                            </td>
+                            <td width="50px">
+                                <img id="okImg" src="img/play.png" align="center" width="50px" height="50px" border="none" />
+                            </td>
+                            <td width="10px"></td>
+                        </table>
                     </td>
+                </tr>
+                <tr valign="top" align="left" style="width: 520px;">
+                    <td valign="top" align="left" style="background-color: #ececec; color: #000000;width: 520px;">
+                        <table valign="top" cellpadding="0" cellspacing="0" border="0" width="520px" style="background-color: #ececec;height: 800px">
+                            <td width="10px"></td>
+                            <td width="400px">
+
+                            </td>
+                            <td width="50px" align="center">
+
+                            </td>
+                            <td style="width: 10px;"></td>
+                            <td width="50px">
+
+                            </td>
+                            <td width="50px">
+
+                            </td>
+                            <td width="10px"></td>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+            <!--
+            <table cellpadding="0" cellspacing="0" border="1" width="520px"  align="center" style="background-color: #ececec; height: 55px;">
+                <tr valign="top">
+                    <td width="10px"></td>
                     <td width="100px" valign="center">
                         <p id="audio_position" style="font-family: Arial; font-size: 14pt ; font-weight: bold; height: 55px;"></p>
                     </td>
@@ -69,19 +113,10 @@
                     <td width="50px">
                         <img id="playAudio_Push" src="img/play_red.png" align="center" width="50px" height="50px" border="none" onclick="playAudioPush();" />
                     </td>
-                    <td width="50px" align="center">
-                        <img id="photoImg" src="img/photo.png" align="center" width="50px" height="50px" border="none" onclick="capturePhoto();" />
-                    </td>
-                    <td style="width: 15px;"></td>
-                    <td width="50px">
-                        <img id="recordAudio_Push" src="img/micro_push.png" align="center" width="50px" height="50px" border="none" />
-                    </td>
                     <td width="10px"></td>
                 </tr>
-                <tr align="center">
-                    <td colspan="7" align="center" style="height: 10px"></td>
-                </tr>
             </table>
+            -->
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
